--- a/bound_bench/scripts/simply.yaml
+++ b/bound_bench/scripts/simply.yaml
@@ -8,11 +8,11 @@ steered_model:
     You are a helpful assistant. While answering, you should *naturally and prominently* include the concept "{concept}" in your response.
     Be concise, correct, and keep the concept central to the explanation.
   # Same HF model for sampling and scoring; "steered" is realized by prompt-prepending:
-  base_model_name: "meta-llama/Meta-Llama-3-8B-Instruct"
+  base_model_name: "google/gemma-2b-it"
 
 data:
   concept: "happiness"
-  questions_jsonl: "/absolute/or/relative/path/to/questions.jsonl"
+  questions_jsonl: "/Users/alexwang/BoundBench/bound_bench/data/data_300.json"
   # Each line in the jsonl can be:
   #   {"question":"..."}  OR {"text":"..."}  OR a raw JSON string "..."
   # The loader is forgiving and extracts the text accordingly.
@@ -20,13 +20,13 @@ data:
 judge:
   mode: "online"                   # only "online" supported for now
   type: "trinary"                  # "binary" | "trinary" | "hexanary"
-  model: "gpt-4o-mini"             # passed to OpenAI Responses API
+  model: "gpt-5-nano-2025-08-07"             # passed to OpenAI Responses API
   use_icl: false                   # reserved; not used yet
 
 sampling:
-  iwae_samples: 16                 # K samples per question
+  iwae_samples: 4                 # K samples per question
   resamples: 100                   # Monte Carlo resamples for IWAE curve estimation
-  ks: [1, 2, 4, 8, 16]             # which K values to plot; must be <= iwae_samples
+  ks: [1, 2, 4]             # which K values to plot; must be <= iwae_samples
   max_new_tokens: 256
   temperature: 0.8
   top_p: 0.95
