--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,4 +11,7 @@ dependencies = [
     "transformers>=4.56.2",
     "vllm>=0.6.0",
     "pyyaml",
+    "pyvene>=0.1.0",
+    "psutil>=5.9.0",
+    "gputil>=1.4.0",
 ]
