--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "boundbench"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
-requires-python = ">=3.13"
+requires-python = ">=3.11"
 dependencies = [
     "huggingface-hub>=0.35.3",
     "openai>=2.1.0",
@@ -14,4 +14,5 @@ dependencies = [
     "pyvene>=0.1.0",
     "psutil>=5.9.0",
     "gputil>=1.4.0",
+    "python-dotenv>=1.0.0",
 ]
